--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,18 @@
         "**/CVS": true,
         "**/.DS_Store": true,
         "**/Thumbs.db": true
-    }
+    },
+    "colorTabs.config": [
+        {
+            "regex": "app/Views/.*",
+            "color": "#FF0000",
+            "label": "MOBILE"
+        },
+        {
+            "regex": ".*/web/.*"
+        },
+        {
+            "regex": ".*/mobile/.*"
+        }
+    ]
 }
