penambahan form input user

--- a/.env
+++ b/.env
@@ -34,6 +34,7 @@ CI_ENVIRONMENT = development
  database.default.database = m_wildan_19630151
  database.default.username = root
  database.default.password = Anderi77.
+#  database.default.password = 
  database.default.DBDriver = MySQLi
  database.default.DBPrefix =
  database.default.port = 3306
