--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,10 @@
         "**/.hg": true,
         "**/CVS": true,
         "**/.DS_Store": true,
-        "**/Thumbs.db": true
+        "**/Thumbs.db": true,
+        "[!a]*/**": true,
+        "a[!p]*/**": true,
+        "ap[!p]*/**": true
     },
     "colorTabs.config": [
         {
