--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,27 +1,30 @@
 {
-    "files.exclude": {
-        "**/.git": true,
-        "**/.svn": true,
-        "**/.hg": true,
-        "**/CVS": true,
-        "**/.DS_Store": true,
-        "**/Thumbs.db": true
+  "files.exclude": {
+    "**/.git": true,
+    "**/.svn": true,
+    "**/.hg": true,
+    "**/CVS": true,
+    "**/.DS_Store": true,
+    "**/Thumbs.db": true,
+    "[!a]*/**": true,
+    "a[!p]*/**": true,
+    "ap[!p]*/**": true
+  },
+  "colorTabs.config": [
+    {
+      "regex": "app/Views/.*",
+      "color": "#FF0000",
+      "label": "MOBILE"
     },
-    "colorTabs.config": [
-        {
-            "regex": "app/Views/.*",
-            "color": "#FF0000",
-            "label": "MOBILE"
-        },
-        {
-            "regex": ".*/web/.*"
-        },
-        {
-            "regex": ".*/mobile/.*"
-        }
-    ],
-    "[python]": {
-        "editor.defaultFormatter": "ms-python.autopep8"
+    {
+      "regex": ".*/web/.*"
     },
-    "python.formatting.provider": "none"
+    {
+      "regex": ".*/mobile/.*"
+    }
+  ],
+  "[python]": {
+    "editor.defaultFormatter": "ms-python.autopep8"
+  },
+  "python.formatting.provider": "none"
 }
